--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
             <version>1.3.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-cloudformation</artifactId>
+            <version>1.11.667</version>
+        </dependency>
+
         <!-- General utils libraries -->
         <dependency>
             <groupId>com.google.guava</groupId>
