--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
                 <version>1.6.0</version>
                 <configuration>
                     <mainClass>com.amazonaws.rp.nightswatch.builder.NWBuilderApp</mainClass>
+                    <cleanupDaemonThreads>false</cleanupDaemonThreads>
                 </configuration>
             </plugin>
 
@@ -62,25 +63,25 @@
         <!-- AWS Cloud Development Kit -->
         <dependency>
             <groupId>software.amazon.awscdk</groupId>
-            <artifactId>cdk</artifactId>
-            <version>0.36.1</version>
+            <artifactId>core</artifactId>
+            <version>1.18.0</version>
         </dependency>
 
         <!-- Respective AWS Construct Libraries -->
         <dependency>
             <groupId>software.amazon.awscdk</groupId>
             <artifactId>s3</artifactId>
-            <version>0.36.1</version>
+            <version>1.18.0</version>
         </dependency>
         <dependency>
             <groupId>software.amazon.awscdk</groupId>
             <artifactId>iot</artifactId>
-            <version>0.36.1</version>
+            <version>1.18.0</version>
         </dependency>
         <dependency>
             <groupId>software.amazon.awscdk</groupId>
             <artifactId>ec2</artifactId>
-            <version>0.36.1</version>
+            <version>1.18.0</version>
         </dependency>
 
         <!-- Respective AWS SDK Libraries -->
@@ -99,6 +100,12 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-cloudformation</artifactId>
+            <version>1.11.687</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-sts</artifactId>
             <version>1.11.687</version>
         </dependency>
 
